--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
-/__pycache__
-/.vscode
-/venv
+__pycache__/
 .env
+.DS_Store
+.pytest_cache/
+.vscode/
+venv/
+resources/Montserrat/
+samples/
 client_secrets.json
-sample_*
